--- a/distro/Containerfile
+++ b/distro/Containerfile
@@ -1,4 +1,11 @@
+FROM ghcr.io/mehal-tech/amrite:main as crunbuild 
+
 FROM quay.io/fedora/fedora-bootc:41
+
 RUN dnf -y install mkpasswd
 RUN pass=$(mkpasswd --method=SHA-512 --rounds=4096 thepassword) && useradd -m -G wheel bootcer -p $pass
 RUN echo "%wheel        ALL=(ALL)       NOPASSWD: ALL" > /etc/sudoers.d/wheel-sudo
+# Install amrite for wasi support
+COPY --from=crunbuild /vendor/fedora_41/libwasmedge.so.0 /usr/local/lib64/libwasmedge.so.0 
+COPY --from=crunbuild /vendor/crun-wasmedge /usr/bin/crun
+
