--- a/.github/workflows/build-coras.yaml
+++ b/.github/workflows/build-coras.yaml
@@ -4,6 +4,8 @@ on:
   push:
     paths:
       - 'distro/**'
+    paths-ignore:
+      - "**.md"
     branches:
       - main
 jobs:
@@ -22,7 +24,10 @@ jobs:
     steps:
       - name: Delete huge unnecessary tools folder
         run: rm -rf /opt/hostedtoolcache
-
+      - name: Install qemu dependency
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y qemu-user-static
       - name: Clone the repository
         uses: actions/checkout@v4
 
@@ -32,6 +37,8 @@ jobs:
         with:
           image: ${{ env.IMAGE_NAME }}
           tags: latest ${{ github.sha }}
+          archs: amd64,ARM64
+          oci: true
           containerfiles: |
             ./distro/Containerfile
 
