--- a/.github/workflows/build-coras.yaml
+++ b/.github/workflows/build-coras.yaml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: /distro
+        working-directory: /home/runner/work/open-coras/distro
     env:
       IMAGE_NAME: open-coras
       REGISTRY: ghcr.io/mehal-tech
