--- a/.github/workflows/build-coras.yaml
+++ b/.github/workflows/build-coras.yaml
@@ -34,7 +34,7 @@ jobs:
         id: build-image
         uses: redhat-actions/buildah-build@v2
         with:
-          working-directory: ./distro
+          working-directory: /home/runner/work/open-coras/distro
           image: ${{ env.IMAGE_NAME }}
           tags: latest ${{ github.sha }}
           archs: amd64,ARM64
