fix: more absolutes
Signed-off-by: Anton Whalley <antonwhalley@yahoo.com>

--- a/.github/workflows/build-coras.yaml
+++ b/.github/workflows/build-coras.yaml
@@ -40,7 +40,7 @@ jobs:
           archs: amd64,ARM64
           oci: true
           containerfiles: |
-            ./Containerfile
+            /home/runner/work/open-coras/distro/Containerfile
 
       - name: Log in to the GitHub Container registry
         uses: redhat-actions/podman-login@v1
