--- a/.github/workflows/build-coras.yaml
+++ b/.github/workflows/build-coras.yaml
@@ -34,13 +34,13 @@ jobs:
         id: build-image
         uses: redhat-actions/buildah-build@v2
         with:
-          wordir: /home/runner/work/open-coras/distro
+          workdir: /home/runner/work/open-coras/distro
           image: ${{ env.IMAGE_NAME }}
           tags: latest ${{ github.sha }}
           archs: amd64,ARM64
           oci: true
           containerfiles: |
-            ../Containerfile
+            ./Containerfile
 
       - name: Log in to the GitHub Container registry
         uses: redhat-actions/podman-login@v1
