--- a/.github/workflows/build-coras.yaml
+++ b/.github/workflows/build-coras.yaml
@@ -29,10 +29,6 @@ jobs:
           sudo apt-get install -y qemu-user-static
       - name: Clone the repository
         uses: actions/checkout@v4
-      - name: Print current location
-        run: pwd
-      - name: list files
-        run: ls
       - name: Use buildah bud to create the image
         id: build-image
         uses: redhat-actions/buildah-build@v2
@@ -42,7 +38,7 @@ jobs:
           archs: amd64,ARM64
           oci: true
           containerfiles: |
-            ./distro/Containerfile
+            ./Containerfile
 
       - name: Log in to the GitHub Container registry
         uses: redhat-actions/podman-login@v1
