fix: owner name
Signed-off-by: Anton Whalley <antonwhalley@yahoo.com>

--- a/.github/workflows/build-coras.yaml
+++ b/.github/workflows/build-coras.yaml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       IMAGE_NAME: open-coras
-      REGISTRY: ghcr.io/mehal-tech
+      REGISTRY: ghcr.io/ubiquitous-factory
     permissions:
       contents: read
       packages: write
