--- a/.github/workflows/build-coras.yaml
+++ b/.github/workflows/build-coras.yaml
@@ -1,4 +1,4 @@
-name: Build Coras bootc image
+name: build coras bootc image
 on:
   workflow_dispatch:
   push:
@@ -54,3 +54,4 @@ jobs:
           image: ${{ steps.build-image.outputs.image }}
           tags: ${{ steps.build-image.outputs.tags }}
           registry: ${{ env.REGISTRY }}
+               
