fix: move quadit install
Signed-off-by: Anton Whalley <antonwhalley@yahoo.com>

--- a/first-boot/first-boot.service
+++ b/first-boot/first-boot.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Run script on first boot when network is reachable
-ConditionFirstBoot=yes
+# ConditionFirstBoot=yes
 After=network.target
 
 [Service]
