fix: paths in build
Signed-off-by: Anton Whalley <antonwhalley@yahoo.com>

--- a/.github/workflows/build-rpi.yaml
+++ b/.github/workflows/build-rpi.yaml
@@ -3,6 +3,7 @@ on:
   workflow_dispatch:
   push:
     paths:
+      - '.github/workflows/build-rpi.yaml'
       - 'distro/rpi/Containerfile'
       - 'distro/rpi/on-boot/**'
     branches:
