fix: set context
Signed-off-by: Anton Whalley <antonwhalley@yahoo.com>

--- a/.github/workflows/build-rpi.yaml
+++ b/.github/workflows/build-rpi.yaml
@@ -37,6 +37,7 @@ jobs:
         with:
           image: ${{ env.IMAGE_NAME }}
           tags: ${{ github.sha }}
+          context: ./distro/rpi/
           archs: ARM64
           oci: true
           containerfiles: |
