fix: make output
Signed-off-by: Anton Whalley <antonwhalley@yahoo.com>

--- a/.github/workflows/build-rpi.yaml
+++ b/.github/workflows/build-rpi.yaml
@@ -52,6 +52,7 @@ jobs:
 
       - name: Generate xz file
         run: |
+          mkdir output
           sudo podman run \
           --privileged \
           --pull=newer \
