--- a/.github/workflows/build-generic.yaml
+++ b/.github/workflows/build-generic.yaml
@@ -14,7 +14,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       IMAGE_NAME: open-coras
-      REGISTRY: ghcr.io/mehal-tech
+      REGISTRY: ghcr.io
+      NAMESPACE: ubiquitous-factory
     permissions:
       contents: read
       packages: write
@@ -34,9 +35,9 @@ jobs:
         id: build-image
         uses: redhat-actions/buildah-build@v2
         with:
-          image: ${{ env.IMAGE_NAME }}
+          image: ${{env.NAMESPACE}}/${{ env.IMAGE_NAME }}
           tags: latest ${{ github.sha }}
-          archs: amd64,ARM64
+          archs: amd64
           oci: true
           containerfiles: |
             ./distro/generic/Containerfile
@@ -57,7 +58,9 @@ jobs:
           registry: ${{ env.REGISTRY }}
           name: Release ISO Image
       - name: build iso
-        run: podman run \
+        run: |
+            mkdir output  
+            podman run \
             --rm \
             -it \
             --privileged \
@@ -74,9 +77,9 @@ jobs:
         with:
           draft: false
           prerelease: false
-          release_name: ${{ env.IMAGE_NAME }}-${{ github.sha }}
-          tag_name: ${{ env.IMAGE_NAME }}-${{ github.sha }}
-          body_path: distro/rpi/CHANGELOG.md
+          release_name: amd64-${{ env.IMAGE_NAME }}-${{ github.sha }}
+          tag_name: amd64-${{ env.IMAGE_NAME }}-${{ github.sha }}
+          body_path: distro/generic/CHANGELOG.md
         env:
           GITHUB_TOKEN: ${{ github.token }}
       - name: Publish xz file
@@ -85,6 +88,6 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: output/raw/disk.xz
-          asset_name: ${{ env.IMAGE_NAME }}-${{ github.sha }}.xz
+          asset_path: output/raw/disk.iso
+          asset_name: amd64-${{ env.IMAGE_NAME }}-${{ github.sha }}.iso
           asset_content_type: application/gzip
