--- a/.github/workflows/build-rpi.yaml
+++ b/.github/workflows/build-rpi.yaml
@@ -62,8 +62,9 @@ jobs:
       - name: Generate xz file
         run: |
             mkdir output
-            sudo podman pull ${{ env.REGISTRY }}/${{env.NAMESPACE}}/${{env.IMAGE_NAME}}:${{github.sha}}
+            sudo podman pull --arch arm64 ${{ env.REGISTRY }}/${{env.NAMESPACE}}/${{env.IMAGE_NAME}}:${{github.sha}}
             sudo podman run \
+            --arch arm64
             --privileged \
             --pull=newer \
             --security-opt label=type:unconfined_t \
@@ -73,7 +74,7 @@ jobs:
             --type raw \
             --local \
             --rootfs ext4 \
-            ${{ env.REGISTRY }}/${{env.NAMESPACE}}/${{ steps.build-image.outputs.image }}:${{ github.sha }}
+            ${{ env.REGISTRY }}/${{env.NAMESPACE}}/${{env.IMAGE_NAME}}:${{ github.sha }}
             xz -v -0 -T0 output/raw/disk.raw
       - name: Generate release page
         uses: actions/create-release@v1
