--- a/.github/workflows/build-generic.yaml
+++ b/.github/workflows/build-generic.yaml
@@ -40,6 +40,7 @@ jobs:
           tags: latest ${{ github.sha }}
           archs: amd64
           oci: true
+          context: ./distro/generic 
           containerfiles: |
             ./distro/generic/Containerfile
 
