--- a/.github/workflows/build-generic.yaml
+++ b/.github/workflows/build-generic.yaml
@@ -18,7 +18,7 @@ jobs:
       REGISTRY: ghcr.io
       NAMESPACE: ubiquitous-factory
     permissions:
-      contents: read
+      contents: write
       packages: write
       attestations: write
       id-token: write
@@ -76,12 +76,14 @@ jobs:
           body_path: distro/generic/CHANGELOG.md
         env:
           GITHUB_TOKEN: ${{ github.token }}
+      - name: ls output
+        run: ls output 
       - name: Publish iso file
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ github.token }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: output/raw/disk.iso
+          asset_path: output/iso/install.iso
           asset_name: amd64-${{ env.IMAGE_NAME }}-${{ github.sha }}.iso
           asset_content_type: application/gzip
