--- a/.github/workflows/build-rpi.yaml
+++ b/.github/workflows/build-rpi.yaml
@@ -18,7 +18,7 @@ jobs:
       REGISTRY: ghcr.io
       NAMESPACE: ubiquitous-factory
     permissions:
-      contents: read
+      contents: write
       packages: write
       attestations: write
       id-token: write
@@ -64,7 +64,7 @@ jobs:
       - name: Pull Image
         run: sudo podman pull --arch arm64 ${{ env.REGISTRY }}/${{env.NAMESPACE}}/${{env.IMAGE_NAME}}:${{github.sha}}
       - name: Generate raw file
-        run: sudo podman run --arch arm64 --privileged --pull=newer --security-opt label=type:unconfined_t -v $(pwd)/output:/output -v /var/lib/containers/storage:/var/lib/containers/storage quay.io/centos-bootc/bootc-image-builder:latest --type raw --local --rootfs ext4 ${{ env.REGISTRY }}/${{env.NAMESPACE}}/${{env.IMAGE_NAME}}:${{ github.sha }}
+        run: sudo podman run --arch arm64 --privileged --pull=newer --security-opt label=type:unconfined_t -v $(pwd)/output:/output -v /var/lib/containers/storage:/var/lib/containers/storage quay.io/centos-bootc/bootc-image-builder:latest --type raw --rootfs ext4 ${{ env.REGISTRY }}/${{env.NAMESPACE}}/${{env.IMAGE_NAME}}:${{ github.sha }}
       - name: Generate xz file 
         run: xz -v -0 -T0 output/raw/disk.raw      
       - name: Generate release page
